--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -33,7 +33,7 @@ body {
 span {
     border-bottom: 1px solid #534f59;
     display: inline-block;
-    font-size: 2rem;
+    font-size: 2.2rem;
     height: 2.4rem;
     line-height: 2.4rem;
     margin: 0 .1rem;
@@ -106,11 +106,13 @@ p {
 }
 
 .keyboard-button {
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 700;
-    padding: 1rem;
+    padding: 1.2rem;
     margin: 0 2px;
     text-transform: uppercase;
+    border: none;
+    border-radius: 10%;
     /* transition: all .2s ease-in-out; */
 }
 
@@ -122,7 +124,7 @@ p {
 }
 
 
-@media (min-width: 70rem) {
+@media (min-width: 45rem) {
     #keyboard-cont {
         display: none;
     }
