--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,79 +1,79 @@
-@import './normalize.css';
+@import "./normalize.css";
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 .header {
-    width: 100%;
-    background: #5F3A87;
-    text-align: center;
-    margin: 0 0 2.4rem 0;
-    padding: 1.2rem 0;
+  width: 100%;
+  background: #5f3a87;
+  text-align: center;
+  margin: 0 0 2.4rem 0;
+  padding: 1.2rem 0;
 }
 
 body {
-    background: #2B292E;
-    color: #fafafa;
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 1.6rem;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+  background: #2b292e;
+  color: #fafafa;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 1.6rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 span {
-    border-bottom: 1px solid #534f59;
-    display: inline-block;
-    font-size: 2.2rem;
-    height: 2.4rem;
-    line-height: 2.4rem;
-    margin: 0 .1rem;
-    text-align: center;
-    text-transform: uppercase;
-    width: 2.4rem;
+  border-bottom: 1px solid #534f59;
+  display: inline-block;
+  font-size: 2.2rem;
+  height: 2.4rem;
+  line-height: 2.4rem;
+  margin: 0 0.1rem;
+  text-align: center;
+  text-transform: uppercase;
+  width: 2.4rem;
 }
 
 p {
-    font-weight: 300;
-    margin-bottom: .8rem;
+  font-weight: 300;
+  margin-bottom: 0.8rem;
 }
 
 .puzzle {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 3.2rem 0;
-    padding: 0 1rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 3.2rem 0;
+  padding: 0 1rem;
 }
 #guesses {
-    padding: 0 1rem;
+  padding: 0 1rem;
 }
 
 .button {
-    background: #7044a0;
-    border: none;
-    border-bottom: 2px solid #603a88;
-    cursor: pointer;
-    color: white;
-    font-size: 1.4rem;
-    font-weight: 300;
-    margin-top: 1rem;
-    padding: .8rem;
-    transition: background .3s ease, color .3s ease;
+  background: #7044a0;
+  border: none;
+  border-bottom: 2px solid #603a88;
+  cursor: pointer;
+  color: white;
+  font-size: 1.4rem;
+  font-weight: 300;
+  margin-top: 1rem;
+  padding: 0.8rem;
+  transition: background 0.3s ease, color 0.3s ease;
 }
 
 .button:hover {
-    background: #5F3A87;
+  background: #5f3a87;
 }
 
 /* input {
@@ -82,51 +82,41 @@ p {
 } */
 
 .difficulty {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    max-width: 50%;
-    margin-top: 4.8rem;   
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 50%;
+  margin-top: 4.8rem;
 }
 
-
 #keyboard-cont {
-    margin: 1rem 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  margin: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #keyboard-cont div {
-    display: flex;
+  display: flex;
 }
 
 .second-row {
-    margin: 0.5rem 0;
+  margin: 0.5rem 0;
 }
 
 .keyboard-button {
-    font-size: 1.2rem;
-    font-weight: 700;
-    padding: 1.2rem;
-    margin: 0 2px;
-    text-transform: uppercase;
-    border: none;
-    border-radius: 10%;
-    /* transition: all .2s ease-in-out; */
+  font-size: 1.2rem;
+  font-weight: 700;
+  padding: 1.2rem;
+  margin: 0 2px;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 10%;
+  /* transition: all .2s ease-in-out; */
 }
 
 .keyboard-button:active {
-    transform: scale(1.1);
-    transition: .1s;
-    background: gray;
-    
+  transform: scale(1.1);
+  transition: 0.1s;
+  background: gray;
 }
-
-
-@media (min-width: 45rem) {
-    #keyboard-cont {
-        display: none;
-    }
-}
-
